@@ -4,7 +4,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-DESCUSERBOT="Provides hooks for syncing Joomla! and a third-party application"
+PLG_AUTH_EXAMPLE_XML_DESCRIPTION="Provides hooks for syncing Joomla! and a third-party application"
 
 
 
