@@ -1,16 +1,0 @@
-; $Id$
-; Joomla! Project
-; Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
-; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-; Note : All ini files need to be saved as UTF-8
-
-DESCIMAGE="Makes it possible to insert images in Articles, configure the image's properties and upload new image files."
-MARGIN="Margin"
-UP="Up"
-PADDING="Padding"
-PARAMMARGIN="Margin (in pixels) of DIV surrounding image and caption (only applies if using a caption)"
-PARAMPADDING="Padding (in pixels) of DIV surrounding tmage and caption (only applies if using a caption)"
-IMAGE="Image"
-
-
-
