@@ -4,11 +4,8 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-ALLOWS SEARCHING OF CATEGORIES INFORMATION="Enables searching of Category information"
-CATEGORIES="Categories"
-CATEGORY BLOG="Category Blog"
-CATEGORY LIST="Category List"
-NUMBER OF SEARCH ITEMS TO RETURN="Number of search items to return"
-SEARCH LIMIT="Search Limit"
+PLG_SEARCH_CATEGORIES_CATEGORY="Category"
 
-
+PLG_SEARCH_CATEGORIES_FIELD_SEARCHLIMIT_DESC="Number of search items to return"
+PLG_SEARCH_CATEGORIES_FIELD_SEARCHLIMIT_LABEL="Search Limit"
+PLG_SEARCH_CATEGORIES_XML_DESCRIPTION="Enables searching of Category information"
