@@ -4,10 +4,8 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-ALLOWS SEARCHING OF CONTACTS COMPONENT="Enables searching of the Contact Component"
-CONTACTS="Contacts"
-NUMBER OF SEARCH ITEMS TO RETURN="Number of search items to return"
-SEARCH LIMIT="Search Limit"
+PLG_SEARCH_CONTACTS_CONTACT="Contacts"
 
-
-
+PLG_SEARCH_CONTACTS_FIELD_SEARCHLIMIT_DESC="Number of search items to return"
+PLG_SEARCH_CONTACTS_FIELD_SEARCHLIMIT_LABEL="Search Limit"
+PLG_SEARCH_CONTACTS_XML_DESCRIPTION="Enables searching of the Contact Component"
