@@ -4,13 +4,12 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-ALLOWS SEARCHING OF ALL ARTICLES="Enables searching of all Articles"
-ARTICLES="Articles"
-ARCHIVED CONTENT="Archived Articles"
-CONTENT ITEMS="Articles"
-NUMBER OF SEARCH ITEMS TO RETURN="Number of search items to return"
-SEARCH ARCHIVED CONTENT="Search Archived Articles?"
-SEARCH CONTENT ITEMS="Search Articles?"
-SEARCH LIMIT="Search Limit"
-SEARCH UNCATEGORISED CONTENT?="Search Uncategorized Articles?"
-UNCATEGORISED CONTENT="Uncategorized Articles"
+PLG_SEARCH_CONTENT_FIELD_ARCHIVED_DESC="Search Archived Articles?"
+PLG_SEARCH_CONTENT_FIELD_ARCHIVED_LABEL="Archived Articles"
+PLG_SEARCH_CONTENT_FIELD_CONTENT_DESC="Enables searching of all Articles"
+PLG_SEARCH_CONTENT_FIELD_CONTENT_LABEL="Articles"
+PLG_SEARCH_CONTENT_FIELD_SEARCHLIMIT_DESC="Number of search items to return"
+PLG_SEARCH_CONTENT_FIELD_SEARCHLIMIT_LABEL="Search Limit"
+PLG_SEARCH_CONTENT_FIELD_UNCATEGORISED_DESC="Search Uncategorised Articles?"
+PLG_SEARCH_CONTENT_FIELD_UNCATEGORISED_LABEL="Uncategorised Articles"
+PLG_SEARCH_CONTENT_XML_DESCRIPTION="Enables searching in Articles"
