@@ -4,9 +4,10 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-ALLOWS SEARCHING OF NEWSFEEDS="Enables searching of News Feeds"
-NEWSFEEDS="News Feeds"
-NUMBER OF SEARCH ITEMS TO RETURN="Number of search items to return"
-SEARCH LIMIT="Search Limit"
+PLG_SEARCH_NEWSFEEDS_NEWSFEEDS="Newsfeeds"
+
+PLG_SEARCH_NEWSFEEDS_FIELD_SEARCHLIMIT_DESC="Number of search items to return"
+PLG_SEARCH_NEWSFEEDS_FIELD_SEARCHLIMIT_LABEL="Search Limit"
+PLG_SEARCH_NEWSFEEDS_XML_DESCRIPTION="Enables searching of Newsfeeds"
 
 
