@@ -4,8 +4,8 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-ALLOWS SEARCHING OF WEBLINKS COMPONENT="Enables searching of Web Links Component"
-NUMBER OF SEARCH ITEMS TO RETURN="Number of search items to return"
-SEARCH LIMIT="Search Limit"
-WEBLINKS="Web Links"
+PLG_SEARCH_WEBLINKS="Web Links"
 
+PLG_SEARCH_WEBLINKS_FIELD_SEARCHLIMIT_DESC="Number of search items to return"
+PLG_SEARCH_WEBLINKS_FIELD_SEARCHLIMIT_LABEL="Search Limit"
+PLG_SEARCH_WEBLINKS_XML_DESCRIPTION="Enables searching of Web Links Component"
