@@ -11,7 +11,7 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.5</version>
-	<description>An example of an authentication plugin</description>
+	<description>PLG_AUTH_EXAMPLE_XML_DESCRIPTION</description>
 	<files>
 		<filename
 			plugin="example">example.php</filename>
