@@ -8,7 +8,7 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.0</version>
-	<description>PLG_CONTENT_EXAMPLE_DESCRIPTION</description>
+	<description>PLG_CONTENT_EXAMPLE_XML_DESCRIPTION</description>
 
 	<files>
 		<filename plugin="example">example.php</filename>
