@@ -100,7 +100,7 @@ class plgSearchCategories extends JPlugin
 		$count = count($rows);
 		for ($i = 0; $i < $count; $i++) {
 			$rows[$i]->href = ContentRoute::category($rows[$i]->slug);
-			$rows[$i]->section	= JText::_('Category');
+			$rows[$i]->section	= JText::_('PLG_SEARCH_CATEGORIES_CATEGORY');
 		}
 
 		$return = array();
