@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 05-Feb-2010 Jean-Marie Simonet
 # Translating Toggle Editor button. Correcting Error Key in tiny.
+^ Refactored search plugins ini/keys
 
 05-Feb-2010 Christophe Demko
 ^ Having only one translation file per template (in administrator/language for admin ones and language for site ones)
